syntax = "proto3";
package inference.collateral;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/productscience/inference/x/collateral/types";

// CollateralBalance represents a participant's collateral balance
message CollateralBalance {
  // participant is the address of the participant
  string participant = 1;
  
  // amount is the collateral amount held by the participant
  cosmos.base.v1beta1.Coin amount = 2 [
    (gogoproto.nullable) = false
  ];
} 